--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
     <style>
+      :root {
+        touch-action: pan-x pan-y;
+        height: 100%;
+      }
       .ripple {
         position: absolute;
         border-radius: 50%;
