Update with new sounds

--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -62,25 +62,11 @@
       class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4 m-4"
     >
       <button
-        id="applause"
+        id="klappe"
         class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
         onClick="play_sound(this.id)"
       >
-        <span class="text-2xl">applause</span>
-      </button>
-      <button
-        id="boo"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">boo</span>
-      </button>
-      <button
-        id="victory"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">victory</span>
+        <span class="text-2xl">klappe</span>
       </button>
       <button
         id="nope"
@@ -90,28 +76,6 @@
         <span class="text-2xl">nope</span>
       </button>
       <button
-        id="gasp"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">gasp</span>
-      </button>
-
-      <button
-        id="applause"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">applause</span>
-      </button>
-      <button
-        id="boo"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">boo</span>
-      </button>
-      <button
         id="victory"
         class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
         onClick="play_sound(this.id)"
@@ -119,96 +83,24 @@
         <span class="text-2xl">victory</span>
       </button>
       <button
-        id="nope"
+        id="goal"
         class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
         onClick="play_sound(this.id)"
       >
-        <span class="text-2xl">nope</span>
+        <span class="text-2xl">goal</span>
       </button>
       <button
-        id="gasp"
+        id="spiller-sang"
         class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
         onClick="play_sound(this.id)"
       >
-        <span class="text-2xl">gasp</span>
-      </button>
-
-      <button
-        id="applause"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">applause</span>
-      </button>
-      <button
-        id="boo"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">boo</span>
-      </button>
-      <button
-        id="victory"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">victory</span>
-      </button>
-      <button
-        id="nope"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">nope</span>
-      </button>
-      <button
-        id="gasp"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">gasp</span>
-      </button>
-
-      <button
-        id="applause"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">applause</span>
-      </button>
-      <button
-        id="boo"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">boo</span>
-      </button>
-      <button
-        id="victory"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">victory</span>
-      </button>
-      <button
-        id="nope"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">nope</span>
-      </button>
-      <button
-        id="gasp"
-        class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
-        onClick="play_sound(this.id)"
-      >
-        <span class="text-2xl">gasp</span>
+        <span class="text-2xl">spiller sang</span>
       </button>
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
 
-        const soundFiles = ["applause", "boo", "victory", "nope", "gasp"];
+        const soundFiles = ["klappe", "nope", "victory", "goal", "spiller-sang"];
         const audios = {};
 
         soundFiles.forEach((filename) => {
