--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -69,7 +69,7 @@
         <span class="text-2xl">klappe</span>
       </button>
       <button
-        id="nope"
+        id="nananana"
         class="w-full h-64 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded flex items-center justify-center relative overflow-hidden"
         onClick="play_sound(this.id)"
       >
@@ -100,7 +100,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
 
-        const soundFiles = ["klappe", "nope", "victory", "goal", "spiller-sang"];
+        const soundFiles = ["klappe", "nananana", "victory", "goal", "spiller-sang"];
         const audios = {};
 
         soundFiles.forEach((filename) => {
